Changed some thingies

--- a/minesweeperd3.html
+++ b/minesweeperd3.html
@@ -7,9 +7,9 @@
 
   </h1>
 
-  <select id="difficulty" name="difficulty">
-    <option value='beginner' selected='selected'>Beginner</option>
-    <option value='intermediate'>Intermediate</option>
+  <select id="difficulty">
+    <option value='beginner'>Beginner</option>
+    <option value='intermediate' selected='selected'>Intermediate</option>
     <option value='advanced'>Advanced</option>
     <option value='custom'>Custom</option>
   </select>
